--- a/RCC_app_v6.html
+++ b/RCC_app_v6.html
@@ -22,12 +22,21 @@
                 -moz-border-radius: 5px;
                 -webkit-border-radius: 5px;
                 border-radius: 5px;
-                height: 22px;
+                height: 30px;
             }
-            #enter {
-                position: relative;
-                right: 5px;
+            #reset-button {
+                background: #CEECF5;
+                position: absolute;
+                float:left;
+                right: 100px;
+                top:50px;
                 padding: 5px;
+                -moz-border-radius: 5px;
+                -webkit-border-radius: 5px;
+                width: auto;
+                @font-face{
+                    src: url(http://dl.dafont.com/dl/?f=champagne_limousines.ttf);
+                }
             }
         </style>
         <script src='http://code.jquery.com/jquery-latest.min.js'></script>
