--- a/RCC_app_v6.html
+++ b/RCC_app_v6.html
@@ -23,6 +23,10 @@
                 -webkit-border-radius: 5px;
                 border-radius: 5px;
                 height: 30px;
+                margin-bottom: 10px;
+                margin-top: 10px;
+                margin-left: 10px;
+                margin-right: 10px;
             }
             #reset-button {
                 background: #CEECF5;
@@ -33,10 +37,11 @@
                 padding: 5px;
                 -moz-border-radius: 5px;
                 -webkit-border-radius: 5px;
-                width: auto;
-                @font-face{
-                    src: url(http://dl.dafont.com/dl/?f=champagne_limousines.ttf);
-                }
+                width: 200px;
+                margin-bottom: 10px;
+                margin-top: 10px;
+                margin-left: 10px;
+                margin-right: 10px;
             }
         </style>
         <script src='http://code.jquery.com/jquery-latest.min.js'></script>
