--- a/RCC_app_v6.html
+++ b/RCC_app_v6.html
@@ -45,11 +45,21 @@
                 width: 200px;
                 margin-bottom: 10px;
                 margin-top: 10px;
-                margin-left: 10px;
+                margin-left: 5px;
                 margin-right: 10px;
                 font-family: 'Champ&Lim';
                 font-size: 14;
                 font-weight: bold;
+            }
+            .btn {
+                position:absolute;
+                top: 50px;
+                left: 500px;
+                float: left;
+                margin-bottom: 10px;
+                margin-top: 10px;
+                margin-left: 5px;
+                margin-right: 10px;
             }
         </style>
         <script src='http://code.jquery.com/jquery-latest.min.js'></script>
@@ -108,8 +118,11 @@
         <div id="map"></div>
         <div id="search-container">
             <input type='Text' id='userInput' name='first_last'>
-            <input type='Button' id='enter' value="Search">
-            <p><input type="Button" id="reset-button" value="Reset View"></p>
+            <input type="Button" id="reset-button" value="Reset View">
+            <input type='Button' id="search-button">
+        </div>
+        <div id='btn'>
+            
         </div>
     </body>
 </html>
