--- a/RCC_app_v6.html
+++ b/RCC_app_v6.html
@@ -23,7 +23,7 @@
                 padding: 5px;
                 border: 1px solid #c0c0c0;
                 float: left;
-                width: 310px;
+                width: 275px;
                 -moz-border-radius: 5px;
                 -webkit-border-radius: 5px;
                 border-radius: 5px;
@@ -51,8 +51,10 @@
                 font-size: 14;
                 font-weight: bold;
             }
-            .btn {
-                position:absolute;
+            .search-button {
+                background: #F2F2F2;
+                position: absolute;
+                font-size: 90%;
                 top: 50px;
                 left: 500px;
                 float: left;
@@ -119,10 +121,7 @@
         <div id="search-container">
             <input type='Text' id='userInput' name='first_last'>
             <input type="Button" id="reset-button" value="Reset View">
-            <input type='Button' id="search-button">
-        </div>
-        <div id='btn'>
-            
-        </div>
+            <input type="Button" id="search-button"><i class="fa fa-search"></i></input>
+        </div>  
     </body>
 </html>
