--- a/RCC_app_v6.html
+++ b/RCC_app_v6.html
@@ -51,7 +51,9 @@
                 margin-right: 10px;
                 font-family: 'Champ&Lim';
                 font-size: 14;
-                font-weight: bold;
+            }
+            #reset-button.active, #reset-button:hover {
+                background-color: #ddd
             }
             .search-button {
                 background: #FFF;
@@ -98,6 +100,22 @@
             #accordion.active, .accordion:hover {
                 background-color: #ddd
             }
+            #panel {
+                font-family: "Champ&Lim";
+            }
+            #radio {
+                position: absolute;
+                font-family: "Champ&Lim";
+                font-size: 14;
+                align-content: center;
+                align-items: center;
+                top:50px;
+                right:300px;
+                margin-bottom: 10px;
+                margin-top: 10px;
+                margin-left: 10px;
+                margin-right: 10px;
+            }
         
         </style>
         <script src='http://code.jquery.com/jquery-latest.min.js'></script>
@@ -135,7 +153,7 @@
                         console.log(latlng);
                         map.fitBounds(bounds);
                 });
-            });
+            });        
             //allow enter key to initiate the userInput value
             $('#userInput').keypress(function(event){
                 if(event.keyCode == 13){
@@ -161,6 +179,9 @@
                 active: false,
                 event: "mouseover"
             });
+            $(function(){
+                $("#radio").buttonset();
+            });
         }
         window.onload = main;
     </script>
@@ -168,20 +189,23 @@
         <div id="map"></div>
         <div id="search-container">
             <input type='Text' id='userInput' title='Search by Name, Topic of Research, Institution, or Geographic Area of Interest.'>
-            <input type="Button" id="reset-button" value="Reset View">
+            <input type="button" id="reset-button" value="Reset View">
             <a href="#" class="search-button"><i class="fa fa-search"></i></a>
         </div>  
         <div id="accordion">
             <h1>Filter Option</h1>
             <div id="panel">
-                <p>Male</p>
-                <p>female</p>
+                <input type="checkbox" id="male"><label for="male">Male</label>
+                <p><input type="checkbox" id="female"><label for="female">Female</label></p>
+                <p></p>
+                <p></p>
+                <p><input type="checkbox" id="rcc_bnb"><label for="rcc_bnb">Willing Hosts</label></p>
+                <p><input type="button" id="reset-filter" value="Reset Filters"></p>
             </div>
         </div>
         <div id="radio">
-            <input type="radio" id="satellite" name="basemap"><label for="satellite">Satellite</label>
-            <input type="radio" id="greyscale" name="basemap"><label for="greyscale">Greyscale</label>
-            <input type="radio" id="satellite" name="basemap"><label for="satellite">Satellite</label>
+            <input type="radio" id="satellite"><label for="satellite">Satellite</label>
+            <input type="radio" id="streets"><label for="streets">Streets</label>
         </div>
     </body>
 </html>
