--- a/RCC_app_v6.html
+++ b/RCC_app_v6.html
@@ -106,6 +106,7 @@
                 height: 125px;
                 padding: 5px;
             }
+/*
             #radio {
                 position: absolute;
                 font-family: "Champ&Lim";
@@ -119,6 +120,7 @@
                 margin-left: 10px;
                 margin-right: 10px;
             }
+*/
             #reset_filter {
                 font-family: "Champ&Lim";
                 width: 150px;
@@ -129,6 +131,7 @@
                 margin-right: 10px;
             }
         </style>
+<!--        include libraries-->
         <script src='http://code.jquery.com/jquery-latest.min.js'></script>
         <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
         <link href="http://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
@@ -145,9 +148,11 @@
                 zoom: 2,
                 scrollwheel: true 
             }
+            //create an element that references the layer; so far this has not worked for me
             var el = {
                 layer: null,
             }
+            //create an empty array of sublayers to be populated by the sublayer
             var sublayers = []
             cartodb.createVis('map', mapURL, options).on('done', function(vis, layers) {  
                 map = vis.getNativeMap();
@@ -169,7 +174,7 @@
             }).on('error', function(err) {
                 console.log(err);
             }); 
-        
+            //create sublayers with SQL injections to be used with the filter checkboxes.
             var LayerActions = {
                 reset_filter: function(){
                     sublayers[0].set({
@@ -193,7 +198,7 @@
                     return true;
                 },
             }
-            // use a click event to regester the information from the search bar
+            //use a click event to regester the information from the search bar
             var sql = new cartodb.SQL({user: 'mccook3'});
             $('.search-button').click(function() {
                 var input = $("#userInput").val();    
@@ -233,7 +238,7 @@
                 active: false,
                 event: "mouseover"
             });
-            //checkbox function that allows allows one gender checkbox to be selected at a time and applies sql
+            //checkbox function that allows allows one gender checkbox to be selected at a time and applies sql; can't figure out how to reset SQL in the else{} statement!
             $('#male').change(function() {
                 if($(this).is(':checked')){
                     $('#female').attr('disabled', true);
@@ -254,10 +259,14 @@
                     $('#male').attr('disabled', false);
                 }
             });
+            //reset filter option button. So far, I can't get the layer to show when clicked. Maybe this button can just refresh the page to bring the original map back?
             $('#reset_filter').click(function() {
                 $('#reset_filter').removeClass('selected');
                 $(this).addClass('selected');
-                LayerActions[$(this).attr('id')]();
+                sublayers[0].show();
+                //need to show the original layer when this is clicked...
+//                el.layer.show();
+//                LayerActions[$(this).attr('id')]();
             })
         }
         window.onload = main;
