--- a/RCC_app_v6.html
+++ b/RCC_app_v6.html
@@ -82,39 +82,17 @@
             }
             #reset-button.active, #reset-button:hover {
                 background-color: #ddd
-            }
-            #accordion {
-                font-family: 'Champ&Lim';
-                font-size: 14;
-                text-align: right;
-                padding: 3; margin: 3;
-                color: #AFAEB0;
-                position: absolute;
-                width: auto;
-                height: auto;
-                bottom: 50px;
-                left: 10px;
-                -moz-border-radius: 5px;
-                -webkit-border-radius: 5px;
-            }
-            #accordion.active, .accordion:hover {
-                background-color: aquamarine;
-                font-family: "Champ&Lim";
-            }
+            }          
             #panel {
-                background-color: #DBD9D9;
+                position: absolute;
+                bottom: 50;
+                left: 25;
+                background-color: transparent #DBD9D9;
                 padding: 0; margin: 0;
                 width: auto;
                 height: auto;
                 -moz-border-radius: 5px;
                 -webkit-border-radius: 5px;
-            }
-            #basemap_panel {
-                color: #000000;
-                font-family: "Champ&Lim";
-                align-content: center;
-                width: auto;
-                height: 20px;
             }
             .layer_selector {
                 background: rgba(255, 255, 255, 0.9);
@@ -122,32 +100,25 @@
                 padding: 0;
 /*                border: 1px solid #999;*/
                 width: auto;
+                height: auto;
             }
             .layer_selector > p {
                 padding: 5px 10px;
                 border-bottom: 1px solid #999;
             }
             .layer_selector ul {
-                padding: 1; margin: 1;
-                height: 260;
+                padding: 0; margin: 0;
+                height: auto;
                 list-style-type: none;
             }
             .layer_selector li {
                 font-family: 'Champ&Lim';
-                padding: 5px 10px; margin: 5px;
+                padding: 0px 0px; margin: 5px;
                 cursor: pointer;
                 display: block;
             }
             .layer_selector li(:last-child) {
                 border-top: 5px solid #999;
-            }
-            .layer_selector li:hover:not(:last-child) {
-                background-color: #A0BEFC;
-                color: black;
-                opacity: 1;
-                -moz-border-radius: 5px;
-                cursor:pointer;
-                margin: 5px; padding: 5px;
             }
             .layer_selector.sql_selected {
                 background-color: #A6CEE3;
@@ -195,7 +166,7 @@
             
             function layerSelector(layer) {
                 var condition = "";
-                var $options = $(".layer_selector").find("li");
+                var $options = $(".layer_selector").find("id");
                 $options.click(function(e) {
                     var $li = $(e.target);
                     var selected = $li.attr('data');
@@ -274,23 +245,21 @@
             <input type='Text' id='userInput' title='Search by Name, Topic of Research, Institution, or Geographic Area of Interest.'>
             <input type="button" id="reset-button" value="Reset View">
             <a href="#" class="search-button"><i class="fa fa-search"></i></a>
-        </div>  
-        <div id="accordion">
-            <h4>Filter Options</h4>
-            <div id="panel" class='layer_selector'>
+        </div>   
+        <div id="panel" class='layer_selector'>
+            <h4>View Options</h4>
               <ul>
                 <h4>By Gender:</h4>
-                <li data=" WHERE male_female = 'female'" data-type="sql"><center>Female</center></li>
-                <li data=" WHERE male_female = 'male'" data-type="sql"><center>Male</center></li>
+                <li class="layer" data=" WHERE male_female = 'female'" data-type="sql"><input type="checkbox" id='female' name="layer"><label>Female</label></li>
+                <li class="layer" data=" WHERE male_female = 'male'" data-type="sql"><input type="checkbox" id='male' name="layer"><label>Male</label></li>
                 <h4>RCC Bed n' Breakfast:</h4>
-                <li data=" WHERE rcc_bnb ILIKE '%yes%'" data-type="sql"><center>Willing Hosts</center></li>
-                <li data="" data-type="sql"><p><center><h1>Reset Filters</h1></center></p></li>
+                <li class="layer" data=" WHERE rcc_bnb ILIKE '%yes%'" data-type="sql"><input type="checkbox" id='bnb' name="layer"><label>Willing Hosts</label></li>
+                <li class="layer" data="" data-type="sql"><p><center><h1>Reset Filters</h1></center></p></li>
               </ul>
-            </div>
+        </div>
         </div>
         <div id="rcc_image">
                 <img src="https://tnp-production.s3.amazonaws.com/uploads/image_logo/000/018/754/image/medium_62b1203c7f.png">
         </div>
     </body>
-    
 </html>
