--- a/RCC_app_v6.html
+++ b/RCC_app_v6.html
@@ -88,6 +88,7 @@
                 bottom: 50;
                 left: 25;
                 background-color: transparent #DBD9D9;
+                opacity: 0.8;
                 padding: 0; margin: 0;
                 width: auto;
                 height: auto;
